<Page/> - fix broken css due to missing semicolon (#6374)

--- a/src/Page/Page.st.css
+++ b/src/Page/Page.st.css
@@ -219,7 +219,7 @@
   background: linear-gradient(90deg, transparent 40px, value(D70) 40px, value(D70) calc(100% - 40px), transparent calc(100% - 40px));
   position: fixed;
   bottom: 0;
-  right: 50%
+  right: 50%;
   transform: translateX(50%);
   width: available;
   width: -moz-available;
